# docs/swagger.json
@@ -374,48 +374,6 @@
                 "responses": {}
             }
         },
-        "/api/v1/stock/purchase": {
-            "post": {
-                "description": "Purchase raw materials for the stock",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Stock"
-                ],
-                "summary": "Purchase raw materials",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Restaurant ID",
-                        "name": "restaurant",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "description": "Materials to purchase",
-                        "name": "Materials",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/schemas.Purchase"
-                        }
-                    },
-                    {
-                        "type": "string",
-                        "default": "Bearer",
-                        "description": "Authorization",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            }
-        },
         "/api/v1/stock/sell": {
             "post": {
                 "description": "Sell products from the stock",
@@ -448,6 +406,48 @@
                                 "$ref": "#/definitions/schemas.Product"
                             }
                         }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/v1/stock/update": {
+            "post": {
+                "description": "Purchase raw materials for the stock",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Stock"
+                ],
+                "summary": "Purchase/Throw away raw materials",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Restaurant ID",
+                        "name": "restaurant",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "description": "Materials to purchase or waste",
+                        "name": "StockChange",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/schemas.StockChange"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {}
@@ -510,20 +510,6 @@
                 }
             }
         },
-        "schemas.Purchase": {
-            "type": "object",
-            "required": [
-                "materials"
-            ],
-            "properties": {
-                "materials": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/schemas.Material"
-                    }
-                }
-            }
-        },
         "schemas.RawMaterial": {
             "type": "object",
             "required": [
@@ -580,6 +566,25 @@
                     "items": {
                         "$ref": "#/definitions/schemas.RawMaterial"
                     }
+                }
+            }
+        },
+        "schemas.StockChange": {
+            "type": "object",
+            "required": [
+                "materials",
+                "type"
+            ],
+            "properties": {
+                "materials": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schemas.Material"
+                    }
+                },
+                "type": {
+                    "description": "Must be purchase or waste",
+                    "type": "string"
                 }
             }
         }
